[gd_scene load_steps=7 format=2]

[ext_resource path="res://shared_assets/pirata_one.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menus/pause_menu/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/menu_theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 1, 0.478431 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[node name="PauseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 201.0
margin_right = 1019.0
margin_bottom = 399.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 415.0
margin_right = 598.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "paused"

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 439.0
margin_top = 98.0
margin_right = 575.0
margin_bottom = 146.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "main menu"

[node name="UnPauseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 454.0
margin_top = 150.0
margin_right = 559.0
margin_bottom = 198.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "unpause"
[connection signal="gui_input" from="PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_gui_input"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/UnPauseButton" to="." method="_on_UnPauseButton_pressed"]
